# orchestra-v2

./: .gitignore  CLAUDE.md  README.md  REBUILD_PLAN.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
backend/: database.py  main.py  models.py  orchestra.db.backup  requirements.txt
components/: agent-hub.tsx  create-composed-agent-dialog.tsx  custom-node.tsx  file-editor-modal.tsx  full-node-editor.tsx  header.tsx  node-panel.tsx  prompt-editor-modal.tsx  sidebar.tsx  terminal-modal.tsx  workflow-canvas.tsx
desktop/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
docker/: Dockerfile  Dockerfile.claude  build.sh  gemini-wrapper.sh
docs/: PLAN-interactive-sessions.md  VM_SETUP.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
hub/: orchestra.service  requirements.txt
lib/: RULES.md  api.ts  dag-layout.ts  execution.ts  executor.ts  git.ts  inbox-store.ts  sandbox.ts  store.ts  system-check.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src/commands/: execution.rs  mod.rs  nodes.rs  projects.rs  sessions.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/executors/: docker.rs  local.rs  mod.rs  modal.rs  remote.rs
src-tauri/src/sessions/: checks.rs  events.rs  input_detection.rs  manager.rs  mod.rs  monitor.rs  tmux.rs
(+194 files in other folders)
